# ado-workflows

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: ARCHITECTURE.md  PUBLISHING.md
src/ado_workflows/: __init__.py  auth.py  client.py  comments.py  content.py  context.py  discovery.py  formatting.py  iterations.py  lifecycle.py  models.py  parsing.py  pr.py  praise.py  review.py  votes.py
tests/: __init__.py  test_auth.py  test_client.py  test_comment_positioning.py  test_comments.py  test_comments_rich.py  test_content.py  test_context.py  test_discovery.py  test_formatting.py  test_identity.py  test_iterations.py  test_lifecycle.py  test_models.py  test_models_rich.py  test_parsing.py  test_pending_review.py  test_pr.py  test_praise.py  test_review.py  test_votes.py
typings/azure/: __init__.pyi
typings/azure/devops/: connection.pyi
typings/azure/devops/v7_1/core/: core_client.pyi
typings/azure/devops/v7_1/git/: git_client.pyi  models.pyi
typings/azure/devops/v7_1/location/: __init__.pyi  location_client.pyi
typings/azure/devops/v7_1/policy/: models.pyi  policy_client.pyi
typings/azure/devops/v7_1/work_item_tracking/: work_item_tracking_client.pyi
